# contenant

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  justfile
.claude/: settings.local.json
.contenant/: Dockerfile
.github/workflows/: ci.yml
.pi/: permissions.json
assets/: Dockerfile  claude_help_2.1.29.txt  entrypoint.sh
docs/plans/: 2025-01-20-contenant-implementation-v2.md  2026-01-23-fennel-config-design.md  2026-01-30-network-firewall-design.md  2026-01-30-network-firewall-plan.md  2026-02-02-claude-version-pinning.md  2026-02-03-shell-completions.md
image/: Dockerfile  claude.json  entrypoint.sh  jj-container-signing.toml
src/: backend.rs  bridge.rs  claude_help.txt  config.rs  lib.rs  main.rs  runtime.rs
