[package]
name = "contenant"
version = "0.1.0"
edition = "2024"

[build-dependencies]
sha2 = "*"

[dependencies]
color-eyre = "*"
sha2 = "*"
dirs = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml_ng = "*"
shellexpand = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
xdg = "*"
